--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Free Math</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  </head>
+    <link rel=stylesheet type="text/css" href="Hologram.css">
+    </head>
   <body>
 
     <div id="app"></div>
-
     <script src="/app/bundle.js"></script>
+
   </body>
 </html>
